samples/_failures_safe/1761325126_f6a1e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_183033f0.c: In function ‘main’:
./samples/SAFE/__tmp_183033f0.c:129:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  129 |     struct Token token
      |            ^~~~~
./samples/SAFE/__tmp_183033f0.c:129:12: error: expected declaration or statement at end of input
